--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,29 @@
     "type": "git",
     "url": "git+https://github.com/Wafa-devweb/MeftahiWafa_7_221021.git"
   },
-  "author": "",
+  "author": "wafa meftahi",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Wafa-devweb/MeftahiWafa_7_221021/issues"
   },
-  "homepage": "https://github.com/Wafa-devweb/MeftahiWafa_7_221021#readme"
+  "homepage": "https://github.com/Wafa-devweb/MeftahiWafa_7_221021#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^14.3.2",
+    "email-validator": "^2.0.4",
+    "express": "^4.17.2",
+    "express-rate-limit": "^6.2.0",
+    "fs": "^0.0.1-security",
+    "helmet": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
+    "mysql2": "^2.3.3",
+    "password-validator": "^5.2.1",
+    "path": "^0.12.7",
+    "sequelize": "^6.14.1",
+    "sqlite3": "^5.0.2"
+  }
 }
