maj connect db avec sequelize

--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,23 +1,23 @@
 {
-    "groupomania": {
-    "username": "root",
-    "password": "wafa.mango2000",
-    "database": "groupomania",
-    "host": "localhost",
-    "dialect": "mysql"
+    "development": {
+        "username": "root",
+        "password": "wafa.mango2000",
+        "database": "groupomania",
+        "host": "127.0.0.1",
+        "dialect": "mysql"
     },
     "test": {
-    "username": "root",
-    "password": "wafa.mango2000",
-    "database": "groupomania",
-    "host": "localhost",
-    "dialect": "mysql"
+        "username": "root",
+        "password": "wafa.mango2000",
+        "database": "groupomania",
+        "host": "127.0.0.1",
+        "dialect": "mysql"
     },
     "production": {
-    "username": "root",
-    "password": "wafa.mango2000",
-    "database": "groupomania",
-    "host": "localhost",
-    "dialect": "mysql"
+        "username": "root",
+        "password": "wafa.mango2000",
+        "database": "groupomania",
+        "host": "127.0.0.1",
+        "dialect": "mysql"
     }
 }
