--- a/backend/package.json
+++ b/backend/package.json
@@ -32,10 +32,13 @@
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "password-validator": "^5.2.1",
     "path": "^0.12.7",
-    "sequelize": "^6.14.1",
+    "sequelize": "^6.15.0",
+    "sequelize-auto": "^0.8.8",
+    "sequelize-cli": "^6.4.1",
     "sqlite3": "^5.0.2"
   }
 }
