--- a/backend/package.json
+++ b/backend/package.json
@@ -38,7 +38,10 @@
     "path": "^0.12.7",
     "sequelize": "^6.15.0",
     "sequelize-auto": "^0.8.8",
-    "sequelize-cli": "^6.4.1",
+    "sequelize-cli": "^6.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15",
     "sqlite3": "^5.0.2"
   }
 }
