--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,17 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Wafa-devweb/MeftahiWafa_7_221021.git"
-  },
+  "description": "groupomania",
   "author": "wafa meftahi",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Wafa-devweb/MeftahiWafa_7_221021/issues"
+  "scripts": {
+    "dev": "nodemon index.js",
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "homepage": "https://github.com/Wafa-devweb/MeftahiWafa_7_221021#readme",
+  "main": "server.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.1",
+    "body-parser": "^1.19.2",
     "config": "^3.3.7",
     "config.json": "^0.0.4",
     "cors": "^2.8.5",
@@ -36,12 +28,24 @@
     "mysql2": "^2.3.3",
     "password-validator": "^5.2.1",
     "path": "^0.12.7",
-    "sequelize": "^6.15.0",
+    "sequelize": "^6.17.0",
     "sequelize-auto": "^0.8.8",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "nodemon": "^2.0.15",
     "sqlite3": "^5.0.2"
+  },
+  "bugs": {
+    "url": "https://github.com/Wafa-devweb/MeftahiWafa_7_221021/issues"
+  },
+  "homepage": "https://github.com/Wafa-devweb/MeftahiWafa_7_221021#readme",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Wafa-devweb/MeftahiWafa_7_221021.git"
   }
 }
